[update]: create & update room & message module. Using channel web socket when create room

--- a/.env.local
+++ b/.env.local
@@ -10,6 +10,9 @@ SENTRY_DSN=
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+REDIS_PASSWORD
+
+CHANNEL_PREFIX=app_chat
 
 STATIC_ROOT_DIR=static/
 FORCE_SCRIPT_NAME=
